--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -133,6 +133,12 @@ li:hover {
 	grid-row-gap: 20px;
 }
 
+.div-container {
+	width: 70%;
+	display: flex;
+	justify-content: space-around;
+	margin: 0 auto;
+}
 .gallery img {
 	width: 100%;
 
