--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -134,10 +134,25 @@ li:hover {
 }
 
 .div-container {
-	width: 70%;
+	min-width:550px;
+	width: 50%;
 	display: flex;
-	justify-content: space-around;
-	margin: 0 auto;
+	justify-content: space-evenly;
+	margin: 35px auto;
+}
+
+.div-container > * {
+	padding: 10px 20px ;
+	border: 1px solid #1D6154;
+	border-radius: 25px;
+	font-family: 'syne';
+	color: #1D6154;
+	cursor: pointer;
+}
+
+.div-container > *:hover {
+	background-color: #1D6154;
+	color: white;
 }
 .gallery img {
 	width: 100%;
