--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -23,6 +23,12 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+a {
+	color: black;
+}
+a:visited {
+	color: black;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -30,6 +36,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background-color: #fffef8;
 }
 ol, ul {
 	list-style: none;
@@ -207,3 +214,52 @@ footer nav ul {
 	margin: 2em
 }
 
+#login h2 {
+	text-align:center;
+	margin-top: 1em;
+}
+
+#contact,
+#login {
+	width: 50%;
+	margin: auto;
+}
+#contact > *,
+#login> * {
+	text-align: center;
+}
+#contact h2{
+	margin-bottom: 20px;
+}
+#contact form,
+#login form >  {
+text-align: left;
+margin-top: 30px;
+display: flex;
+flex-direction: column;
+}
+#contact input,
+#login input {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	cursor: pointer;
+}
+#login input [type="email"],
+#login input[type="password"] {
+	padding: 1px 20px;
+}
+#contact label,
+#login label {
+	margin: 2em 0 1em 0;
+}
+#login a {
+	font-family: 'Work Sans';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	text-decoration-line: underline;
+	color: #3D3D30;
+}
